K8S/commands-np-srv.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: commandservice-srv
# spec:
#   type: NodePort
#   selector:
#     app: commandservice
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 80
#       nodePort: 30003

apiVersion: v1
kind: Service
metadata:
  name: commandservice-srv
spec:
  type: NodePort
  selector:
    app: commandservice
  ports:
    - port: 80                # Port mà Service "nghe" bên trong cluster
      targetPort: 8080        # Port của container ứng dụng (Pod)
      nodePort: 30030
