K8S/platforms-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: platformnpservice-srv
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 80
      targetPort: 80
      # nodePort: 30002


# apiVersion: v1
# kind: Service
# metadata:
#   name: example-nodeport-service
# spec:
#   type: NodePort
#   selector:
#     app: example-app
#   ports:
#     - port: 80                # Port mà Service "nghe" bên trong cluster
#       targetPort: 8080        # Port của container ứng dụng (Pod)
#       nodePort: 30001
