K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/service-upstream: "false"
spec:
  ingressClassName: "nginx"
  rules:
  - host: acme.com
    http:
      paths:
      - path: "/api/Platforms"
        pathType: Prefix
        backend:
          service:
            name: platforms-clusterip-srv
            port:
              number: 80
      - path: "/api/c/Platforms"
        pathType: Prefix
        backend:
          service:
            name: commands-clusterip-srv
            port:
              number: 80
